chore: compose and jdk update